<resources>
    <string name="app_name">MyDeas</string>

    <string name="hint_user">Usuário</string>
    <string name="hint_password">Senha</string>
    <string name="bt_enter">Entrar</string>

    <string name="hint_title">Título</string>
    <string name="hint_description">Descrição</string>
    <string name="bt_save">Salvar</string>

    <string name="facebook_app_id">1913156405615738</string>
    <string name="fb_login_protocol_scheme">fb1913156405615738</string>
    <string name="title_activity_main">MyDeas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="error_empty_user">Preencha o usuário</string>
    <string name="error_empty_password">Preencha a senha</string>
    <string name="error_wrong_user_or_pass">Usuário ou senha incorretos</string>
    <string name="error_facebook_login">Erro ao logar com Facebook</string>
    <string name="error_unknown">Erro desconhecido</string>
    <string name="login_with_facebook">Login com Facebook</string>
    <string name="error_title">Preencha o título</string>
    <string name="error_description">Preencha a descrição</string>
    <string name="toast_success_save">Ideia salva com sucesso</string>
    <string name="title_new_idea">Nova Ideia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_accelerators">Aceleradoras</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_logout">Sair</string>
    <string name="dialog_delete_idea">Deseja deletar essa ideia?</string>
    <string name="toast_deleted_idea">Ideia excluída com sucesso</string>
    <string name="no_deias">Nenhuma ideia cadastrada</string>
    <string name="edit_idea">Editar Ideia</string>
    <string name="dialog_logout">Deseja realmente sair?</string>
    <string name="developed_by">Desenvolvido por Luiz Zabuscka</string>
    <string name="app_version">Versão:</string>
</resources>
