<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_36dp"
        android:iconTint="@color/colorAccent"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/nav_acelerators"
        android:icon="@drawable/ic_attach_money_black_36dp"
        android:iconTint="@color/colorAccent"
        android:title="@string/menu_accelerators"/>
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info_black_36dp"
        android:iconTint="@color/colorAccent"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_power_settings_new_black_36dp"
        android:iconTint="@color/colorAccent"
        android:title="@string/menu_logout"/>
  </group>
</menu>
