<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luizzabuscka.mydeas.view.NewIdeaActivity"
    >

  <android.support.design.widget.TextInputLayout
      android:id="@+id/input_layout_title"
      android:layout_width="match_parent"
      android:layout_height="@dimen/et_height"
      android:layout_marginEnd="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      style="@style/LoginInputLayout"
      >

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        android:imeOptions="actionNext"
        android:inputType="textEmailSubject"
        />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/input_layout_description"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="8dp"
      android:gravity="top"
      app:layout_constraintBottom_toTopOf="@+id/btSave"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/input_layout_title"
      style="@style/LoginInputLayout"
      >

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/hint_description"
        android:gravity="top"
        android:inputType="textMultiLine"
        />

  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/btSave"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24dp"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:text="@string/bt_save"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      style="@style/CustomButton"
      />

</android.support.constraint.ConstraintLayout>
