<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.luizzabuscka.mydeas.view.LoginActivity"
    >

  <com.facebook.login.widget.LoginButton
      android:id="@+id/fbButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:text="@string/login_with_facebook"
      app:layout_constraintBottom_toTopOf="@+id/input_layout_user"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />

  <android.support.design.widget.TextInputLayout
      android:id="@+id/input_layout_user"
      android:layout_width="match_parent"
      android:layout_height="@dimen/et_height"
      android:layout_marginBottom="0dp"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      app:layout_constraintBottom_toTopOf="@+id/input_layout_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      style="@style/LoginInputLayout"
      >

    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs_background"
        android:textColor="@color/colorAccent"
        />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/input_layout_password"
      android:layout_width="match_parent"
      android:layout_height="@dimen/et_height"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      app:layout_constraintBottom_toTopOf="@+id/btEnter"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      style="@style/LoginInputLayout"
      >

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:imeOptions="actionGo"
        android:background="@drawable/inputs_background"
        android:textColor="@color/colorAccent"
        android:inputType="textPassword"
        />

  </android.support.design.widget.TextInputLayout>
  <Button
      android:id="@+id/btEnter"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:text="@string/bt_enter"
      style="@style/CustomButton"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />
  <ImageView
      android:id="@+id/ivLogo"
      android:layout_width="153dp"
      android:layout_height="226dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:elevation="5dp"
      app:layout_constraintBottom_toTopOf="@+id/fbButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/thinking"
      />

</android.support.constraint.ConstraintLayout>
